Backport the SDK to Java 8